*SVN*

* Fixed that iconv decoding should catch InvalidEncoding #3153 [jon@siliconcircus.com]

* Tighten rescue clauses.  #5985 [james@grayproductions.net]

* Automatically included ActionController::UrlWriter, such that URL generation can happen within ActionMailer controllers. [DHH]

* Replace Reloadable with Reloadable::Deprecated. [Nicholas Seckar]

* Mailer template root applies to a class and its subclasses rather than acting globally. #5555 [somekool@gmail.com]

* Resolve action naming collision. #5520 [ssinghi@kreeti.com]

* ActionMailer::Base documentation rewrite. Closes #4991 [Kevin Clark, Marcel Molina Jr.]

* Replace alias method chaining with Module#alias_method_chain. [Marcel Molina Jr.] 

* Replace Ruby's deprecated append_features in favor of included. [Marcel Molina Jr.]

* Correct spurious documentation example code which results in a SyntaxError. [Marcel Molina Jr.]


*1.2.1* (April 6th, 2006)

* Be part of Rails 1.1.1


*1.2.0* (March 27th, 2006)

* Nil charset caused subject line to be improperly quoted in implicitly multipart messages #2662 [ehalvorsen+rails@runbox.com]

* Parse content-type apart before using it so that sub-parts of the header can be set correctly #2918 [Jamis Buck]

* Make custom headers work in subparts #4034 [elan@bluemandrill.com]

* Template paths with dot chars in them no longer mess up implicit template selection for multipart messages #3332 [Chad Fowler]

* Make sure anything with content-disposition of "attachment" is passed to the attachment presenter when parsing an email body [Jamis Buck]

* Make sure TMail#attachments includes anything with content-disposition of "attachment", regardless of content-type [Jamis Buck]


*1.1.5* (December 13th, 2005)

* Become part of Rails 1.0


*1.1.4* (December 7th, 2005)

* Rename Version constant to VERSION. #2802 [Marcel Molina Jr.]
